updated deployment manager role text

--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -124,9 +124,16 @@
                 <td width="70%">
                   <p>The <strong>Manager</strong> role provides additional functionality to the Read Only role including:<br>
                   <ul>
-                    <li>Add Comments</li>
-                    <li>Approve the Cancellation Process</li>
-                    <li>Deny the Cancellation Process and send it back to the initiator</li>
+                    <li>Deploy approved concepts</li>
+                    <li>Create, Deploy, Reject Initial Deployment Packages, Candidate Version Packages and Final Version Packages</li>
+                    <li>Display, Request, Validate Pre & Post Deployment Checksums</li>
+                    <li>Track current state of workflow</li>
+                    <li>Search for workflow instance</li>
+                    <li>Modify Deployment Workflow State</li>
+                    <li>Link and Unlink Final Versions</li>
+                    <li>Run Discovery</li>
+                    <li>Select Sites</li>
+                    <li>Select Groups</li>
                   </ul>
                 </td>
               </tr>
