updated deployment manager role text

--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -122,7 +122,7 @@
                   <%= role_checkbox(Roles::DEPLOYMENT_MANAGER) %>
                 </td>
                 <td width="70%">
-                  <p>The <strong>Manager</strong> role provides additional functionality to the Read Only role including:<br>
+                  <p>The <strong>Deployment Manager</strong> role provides additional functionality to the Read Only role including:<br>
                   <ul>
                     <li>Deploy approved concepts</li>
                     <li>Create, Deploy, Reject Initial Deployment Packages, Candidate Version Packages and Final Version Packages</li>
