468082, prisme name change

--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -43,7 +43,7 @@
                   <%= role_checkbox(Roles::SUPER_USER) %>
                 </td>
                 <td width="70%">
-                  <p>The <strong>Super User</strong> role allows full access to all features in both PRISME and KOMET.</p>
+                  <p>The <strong>Super User</strong> role allows full access to all features.</p>
                 </td>
               </tr>
               <tr>
@@ -55,7 +55,7 @@
                   <ul>
                     <li>Create/Modify User Roles</li>
                     <li>Import/Export Terminology Content</li>
-                    <li>Create, Deploy and Configure KOMET</li>
+                    <li>Create, Deploy and Configure the <%=KOMET_NAME%></li>
                     <li>Manage Workflow - Track and Modify the Current State in Workflow</li>
                     <li>Monitor and Run Standardized Reports</li>
                     <li>Review All User In-boxes</li>
