--- a/app/views/welcome/_job_queue.html.erb
+++ b/app/views/welcome/_job_queue.html.erb
@@ -1,4 +1,4 @@
-<h4>PRISME Job Queue</h4>
+<h4><%=PRISME_NAME%> Job Queue</h4>
 <%= render 'layouts/filter_table_poll_results', filter_id: 'pjq_filter_rows', filter_label: 'Filter Results', include_all_rows: false, poll: 'reload' %>
 
 <table id="table-data" class="prisme-table table-striped table-hover">
