added filtering for site selection based on site_type and added modal for hl7 content viewing

--- a/app/views/checksum/_checksum_results_table.html.erb
+++ b/app/views/checksum/_checksum_results_table.html.erb
@@ -31,3 +31,25 @@
         <br>
     <% end %>
 <% end %>
+<!-- modal popup for viewing checksum hl7 -->
+<div id="view_hashes_modal" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h3 style="padding-top: 5px">View Hashes for:&nbsp;<strong><span id="view_hashes_modal_title"></span></strong></h3>
+      </div>
+      <div class="modal-body scrollable_div">
+        <div>
+          <H5 style="font-weight: bold">VistA</H5>
+          <textarea id="textarea_vista_hl7" rows="10" cols="85" readonly></textarea>
+        </div>
+        <div>
+          <H5 style="font-weight: bold">ISAAC</H5>
+          <textarea id="textarea_isaac_hl7" rows="10" cols="85" readonly></textarea>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
