--- a/app/views/hl7_messaging/_discovery_results_table.html.erb
+++ b/app/views/hl7_messaging/_discovery_results_table.html.erb
@@ -1,5 +1,5 @@
-<% if @checksum_results %>
-    <% @checksum_results.each do |row| %>
+<% if @results %>
+    <% @results.each do |row| %>
         <div class="result_hdr" style="border-left: 3px solid green; padding-left: 5px"><%#= tbl_border_color %>
           <div style='background-color: transparent; height: 50px; padding: 5px;'>
             <div style='float: left; color: black; font-weight: bold; font-size: 18px; padding-left: 5px' onclick="toggleResultTable(this);">
@@ -8,7 +8,7 @@
             </div>
           </div>
           <div class="result_table">
-            <table class="prisme-table table-hover checksum_table" id="<%= "tbl_#{row.id}" %>">
+            <table class="prisme-table table-hover discovery_table" id="<%= "discovery_#{row.id}" %>">
               <thead>
               <tr>
                 <th scope="col">Site</th>
@@ -17,13 +17,11 @@
                 <th scope="col">User Name</th>
                 <th scope="col">Request Date</th>
                 <th scope="col">Receive Date</th>
-                <th scope="col">Version</th>
-                <th scope="col">MD5</th>
-                <th scope="col">Discovery</th>
+                <th scope="col">Has Data</th>
               </tr>
               </thead>
               <tbody>
-              <%= render partial: 'checksum_results_tbody', locals: {checksum_details: row.checksum_details} %>
+              <%= render partial: 'discovery_results_tbody', locals: {discovery_details: row.discovery_details} %>
               </tbody>
             </table>
           </div>
@@ -33,22 +31,18 @@
     <% end %>
 <% end %>
 <!-- modal popup for viewing checksum hl7 -->
-<div id="view_hashes_modal" class="modal fade" role="dialog">
+<div id="view_discovery_hl7_modal" class="modal fade modal-wide50" role="dialog">
   <div class="modal-dialog modal-lg">
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h3 style="padding-top: 5px">View Hashes for:&nbsp;<strong><span id="view_hashes_modal_title"></span></strong></h3>
+        <h3 style="padding-top: 5px">Discovery HL7 Message for:&nbsp;<strong><span id="view_discovery_hl7_modal_title"></span></strong></h3>
       </div>
       <div class="modal-body scrollable_div">
         <div>
-          <H5 style="font-weight: bold">VistA</H5>
-          <textarea id="textarea_vista_hl7" rows="10" cols="85" readonly></textarea>
-        </div>
-        <div>
-          <H5 style="font-weight: bold">ISAAC</H5>
-          <textarea id="textarea_isaac_hl7" rows="10" cols="85" readonly></textarea>
+          <H5 style="font-weight: bold">Discovery HL7</H5>
+          <textarea id="textarea_discovery_hl7" rows="20" cols="120" readonly></textarea>
         </div>
       </div>
     </div>
