--- a/app/views/hl7_messaging/index.html.erb
+++ b/app/views/hl7_messaging/index.html.erb
@@ -23,5 +23,10 @@
 
     $(document).ready(function () {
         $("#tabs").tabs();
+
+        // wire the back button to swap the panels
+        $('.btn-back_to_selection').on("click", function () {
+            change_tabs('selections');
+        });
     });
 </script>
