--- a/app/views/hl7_messaging/_checksum_results_table.html.erb
+++ b/app/views/hl7_messaging/_checksum_results_table.html.erb
@@ -11,15 +11,11 @@
             <table class="prisme-table table-hover checksum_table" id="<%= "checksum_#{row.id}" %>">
               <thead>
               <tr>
-                <th scope="col">Site</th>
-                <th scope="col">Subset</th>
-                <th scope="col">Status</th>
-                <th scope="col">User Name</th>
-                <th scope="col">Request Date</th>
-                <th scope="col">Receive Date</th>
-                <th scope="col">Version</th>
-                <th scope="col">MD5</th>
-                <th scope="col">Discovery</th>
+                <th scope="col" width="20%">Site</th>
+                <th scope="col" width="15%">Subset</th>
+                <th scope="col" width="35%" colspan="2">Current Checksum</th>
+                <th scope="col" width="25%">Previous Checksum</th>
+                <th scope="col" width="5%">Discovery</th>
               </tr>
               </thead>
               <tbody>
