--- a/app/views/hl7_messaging/_discovery_display.html.erb
+++ b/app/views/hl7_messaging/_discovery_display.html.erb
@@ -1,6 +1,11 @@
 <% if detail %>
     <div style="float: right"><%= detail.discovery_request.username %></div><br>
-    <div style="float: right"><%= detail.status %></div><br>
+    <div style="float: right; color: <%= detail.status.eql?('FAILED') ? 'red' : 'green' %>" title="<%= detail.failure_message %>">
+      <% if detail.status.eql?('FAILED') %>
+          <i class="fa fa-times-circle" aria-hidden="true"></i></a>
+      <% end %>
+      <%= detail.status %>
+    </div><br>
     <div style="float: right"><%= display_time(detail.start_time) %></div><br>
     <div style="float: right"><%= display_time(detail.finish_time) %></div><br>
     <div style="float: right">
