Per Nuno's email:
Hi Cris,

I was looking at differences between VETS HL7 requests and Prisme HL7 requests.  There are two main differences.
1.       It appears they are using Imm Procedures and are using Immunization Procedures. (TerminologyConfig.xml).
2.       We are adding a 5 next to the 99999 quantity.  This originates in hl7_message_config.yml.erb configuration file.

Here is the request message sent to STLVETSDEV:
MSH^~|\&^VETS MD5^660VM14^XUMF MD5^950^20170313020200.000-0600^^MFQ~M01^70583^T^2.4^^^AL^AL^USA
QRD^20170313020200.000-0600^R^I^Standard Terminology Query^^^99999^ALL^Imm Procedures^VA

Here is the response received from STLVETSDEV:
MSH^~|\&^XUMF MD5^950^VETS MD5^660VM14^20170313160237-0400^^MFR~M01^65760934470^T^2.4^^^AL^NE^USA
MSA^AA^70583^;CHECKSUM:f19d1e1f7b28f77bca3e7a366fb7115f;VERSION:0;
QRD^20170313020200.000-0600^R^I^Standard Terminology Query^^^99999^ALL^Imm Procedures^VA

Sent by Prisme with no response:
2017-03-13 16:38:39,237 - SEND:
MSH^~|\&^VETS MD5^200ET1^XUMF MD5^950^20170313043800.000-0500^^MFQ~M01^10046^T^2.4^^^AL^AL^USA
QRD^20170313043800.000-0500^R^I^Standard Terminology Query^^^99999~5^ALL^Reactions^VA

hl7_message_config.yml.erb

#CE static field values
sub_field_separator: '@'
receiving_application_namespace_id_update: XUMF UPDATE
query_limited_request_units: 5

The query_limited_request_units is set to 5 but should be blank.

--- a/config/hl7/hl7_message_config.yml.erb
+++ b/config/hl7/hl7_message_config.yml.erb
@@ -43,4 +43,4 @@ query_what_department_data_code_identifier: VA
 #CE static field values
 sub_field_separator: '@'
 receiving_application_namespace_id_update: XUMF UPDATE
-query_limited_request_units: 5
+query_limited_request_units:
