--- a/app/views/hl7_messaging/_discovery_results_table.html.erb
+++ b/app/views/hl7_messaging/_discovery_results_table.html.erb
@@ -49,7 +49,7 @@
   function discoveryCsv(btn) {
       var id = $(btn).data('detail_id');
       $(btn).attr('disabled', true);
-      $.get(gon.routes.discovery_csv_path, {format: 'txt', discovery_detail_id: id.split('_')[0]}, function(data) {
+      $.get(gon.routes.discovery_csv_path, {format: 'txt', discovery_detail_id: id}, function(data) {
           var blob = new Blob([data], {type: "text/plain;charset=utf-8"});
           saveAs(blob,'discovery_'+id+'.csv');
           $(btn).attr('disabled', false);
